# TK

./: CMakeLists.txt
CMake/: FindCURL.cmake
Documents/: TransportKit.drawio
Source/: API.cc  API.h  CMakeLists.txt  Error.h  Export.h  Version.cc  Version.h
Source/API/: TKBase.h
Source/TX/: Assert.h  CMakeLists.txt  Format.h  Log.cc  Log.h  LogTest.cc  Mutex.h  Own.h  Platform.h  Ref.h  RefTest.cc  Result.h  RunLoop.cc  RunLoop.h  RunLoopTest.cc  RunLoopThread.h  Thread.h  Time.h
Source/TX/runtime/: BlockingPool.cc  BlockingPool.h
Source/Transport/task/: TaskListener.h  TaskManagerTest.cc
Source/TransportCore/: CMakeLists.txt
Source/TransportCore/API/: TransportCore.cc  TransportCore.h  TransportCoreErrorCode.h  TransportCoreTest.cc
Source/TransportCore/CDN/: HTTPClient.cc  HTTPClient.h  HTTPHeader.cc  HTTPHeader.h  HTTPLink.cc  HTTPLink.h  HTTPLinkTest.cc  HTTPRequest.cc  HTTPRequest.h
Source/TransportCore/Global/: Global.cc
Source/TransportCore/Log/: Log.h
Source/TransportCore/Task/: Scheduler.cc  Scheduler.h  Task.cc  Task.h  TaskListener.h  TaskManager.cc  TaskManager.h  TaskManagerTest.cc
